# udacity-aequitas-exercise

./: README.md  car_aequitas.ipynb  pyproject.toml
