[tool.poetry]
name = "udacity-aequitas-exercise"
version = "0.1.0"
description = "A tutorial notebook on Aequitas from Udacity"
authors = ["Nikolas Hunt <nikolas.hunt@dyson.com>"]

[tool.poetry.dependencies]
python = "^3.9"
aequitas = "0.42"
pandas = "1.2.3"
jupyter-hdfscontents = "x"
jupyter = "^1.0.0"

[tool.poetry.dev-dependencies]
black = "^22.10.0"
flake8 = "^5.0.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
